# SasMCP

./: .gitignore  LICENSE  MIGRATION.md  README.md  autostart-bridge.bat  build-msi.ps1  build.bat  deploy.bat  installer.wxs  pyproject.toml  register-autostart.ps1  sassymcp.spec  start-lan.bat  start-local.bat  start-tunnel.bat  status.bat
.claude/skills/: sassymcp-update.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
audits/: mercury_sassymcp_core_report.md  mercury_sassymcp_modules-a_report.md  mercury_sassymcp_modules-b_report.md
deploy/: README.txt  claude_desktop_config.template.json  grok_desktop_config.template.json  install.ps1  start-beta.bat  start-lan.bat  start-local.bat  start-tunnel.bat  uninstall.ps1
docs/: SassyWorks.md
docs/releases/: v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md
docs/superpowers/plans/: 2026-04-05-license-system.md
docs/superpowers/specs/: 2026-04-05-sassymcp-product-design.md
sassymcp/: __init__.py  __main__.py  auth.py  license.py  server.py
sassymcp-oauth/: package.json  wrangler.toml
sassymcp-oauth/src/: index.js
sassymcp/modules/: __init__.py  _github_client.py  _hooks.py  _rate_limiter.py  _security.py  _tool_loader.py  adb.py  app_launcher.py  audit.py  bluetooth.py  clipboard.py  crosslink.py  editor.py  eventlog.py  fileops.py  github_ops.py  github_quick.py  linux.py  memory.py  meta.py  network_audit.py  observability.py  persona.py  phone_screen.py  process_manager.py  registry.py  runtime_config.py  security_audit.py  selfmod.py  session.py  setup_wizard.py  shell.py  state_manager.py  ui_automation.py  updater.py  utility.py  vision.py  web_inspector.py
scripts/: check-token.ps1  get-auth-header.ps1  mcp-init-body.ps1  smoke-test.ps1
tests/: test_intercept.py  test_updater.py
tools/: mercury_audit_sassymcp.py
