[project]
name = "sassymcp"
version = "0.1.0"
description = "Unified MCP server for Windows desktop automation, Android device control, security auditing, and forensics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sassy Consulting LLC"}]

dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
android = ["adb-shell>=0.4.4"]
network = ["scapy>=2.5.0"]

[project.scripts]
sassymcp = "sassymcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
