[project]
name = "sassymcp"
dynamic = ["version"]
description = "Unified MCP server for Windows desktop automation, Android device control, security auditing, web inspection, cross-session communication, GitHub operations, and AI workflow persona"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SassyMCP Contributors"}]

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "pillow>=10.0.0",
    "uvicorn>=0.30.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
reload = ["watchdog>=3.0.0"]
vision = ["pytesseract>=0.3.10"]
web = ["playwright>=1.40.0"]
all = [
    "pytesseract>=0.3.10",
    "playwright>=1.40.0",
    "watchdog>=3.0.0",
]

[project.scripts]
sassymcp = "sassymcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single source of truth — bump only sassymcp/__init__.py
path = "sassymcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["sassymcp"]

[tool.uv]
# python managed by .python-version file
